--- a/style.css
+++ b/style.css
@@ -1,3 +1,29 @@
 body{
     font-family: 'Poppins', sans-serif;
+    background: #f7f7f7;
+    margin: 0px;
+}
+.orange-color {
+    color: orange;
+}
+section{
+    display:flex;
+}
+.half-width {
+    width: 50%;
+    padding-left: 3%;
+}
+.half-width img {
+    width: 49%;
+}
+.half-width p {
+    font-size: 13px;
+}
+.link-button{
+    background-image: linear-gradient(orange, tomato);
+    text-decoration:none;
+    border-radius:5px;
+    padding: 10px 20px;
+    color:white;
+    font-weight: 700;
 }
