--- a/style.css
+++ b/style.css
@@ -6,15 +6,20 @@ body{
 .orange-color {
     color: orange;
 }
-section{
-    display:flex;
+section {
+    display: flex;
+    margin-bottom: 123px;
 }
 .half-width {
     width: 50%;
     padding-left: 3%;
+    padding-right: 3%;
 }
 .half-width img {
     width: 49%;
+    margin-left: 106px;
+
+
 }
 .half-width p {
     font-size: 13px;
